--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "fd0d773a-228c-408b-a5f9-1f5d5fe184a2",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
      "output_type": "stream",
      "text": [
       "tn_inits={x_t: 2, x_b: 1, y_t: 1, y_b: 1}\n",
-      "tn_exprs={x: x_t/x_b, y: y_t/y_b}\n"
+      "tn_ratios={x: x_t/x_b, y: y_t/y_b}\n"
      ]
     },
     {
@@ -121,14 +121,13 @@
     "gamma = 1\n",
     "beta = 1\n",
     "t_eval = np.linspace(0, 12*pi, 200)\n",
-    "tn_odes, tn_inits, tn_exprs = ode2tn(odes, inits, gamma, beta)\n",
+    "tn_odes, tn_inits, tn_ratios = ode2tn(odes, inits, gamma, beta)\n",
     "from IPython.display import display\n",
     "for sym, expr in tn_odes.items():\n",
     "    print(f\"{sym}' = \", end='')\n",
     "    display(expr)\n",
     "print(f'{tn_inits=}')\n",
-    "print(f'{tn_exprs=}')\n",
-    "# gpac.plot(odes, inits, t_eval)\n",
+    "print(f'{tn_ratios=}')\n",
     "figsize = (15, 6)\n",
     "plot_tn(odes, inits, gamma, beta, t_eval=t_eval, figure_size=figsize, symbols_to_plot=[[x,y], [xt,xb,yt,yb]])"
    ]
