--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "2e8cbc87-5960-4834-b6be-baa25469b65c",
    "metadata": {},
    "outputs": [
@@ -587,22 +587,23 @@
     "P = 1\n",
     "I = 1\n",
     "D = -0.5\n",
-    "val, setpoint, bias, integral, derivative_p, derivative_m, delayed_val = \\\n",
+    "val, setpoint, bias, shifted_integral, derivative_p, derivative_m, delayed_val = \\\n",
     "    sp.symbols('val setpoint bias shifted_integral derivative_p derivative_m delayed_val')\n",
+    "shift = 10\n",
     "proportional_term = P * (setpoint - val)\n",
-    "integral_term = I * (integral - 10)\n",
+    "integral_term = I * (shifted_integral - shift)  # we shift integral up to stop it from going negative\n",
     "derivative_term = D * (val - delayed_val)\n",
-    "c = 1\n",
+    "c = 1  # delayed_val follows val; how far behind determined by c\n",
     "odes = {\n",
     "    val: proportional_term + integral_term + derivative_term,\n",
-    "    integral: setpoint - val,\n",
-    "    delayed_val: c * (val - delayed_val),\n",
+    "    shifted_integral: setpoint - val,     # integral is computed exactly and is one of the variables (though shifted up)\n",
+    "    delayed_val: c * (val - delayed_val), # derivative is approximated and is implicitly val - delayed_val\n",
     "    setpoint: 0,\n",
     "}\n",
     "inits = { \n",
     "    val: 5, \n",
     "    setpoint: 7,\n",
-    "    integral: 10, \n",
+    "    shifted_integral: shift, \n",
     "}\n",
     "t_eval = np.linspace(0,50,500)\n",
     "figsize=(16,4)\n",
@@ -613,14 +614,15 @@
     "}\n",
     "gamma = 3\n",
     "beta = 1\n",
+    "# we have to modify the TN a bit, so instead of calling plot_tn, we call ode2tn to get the TN ODEs, modify them, then call gpac.plot on those\n",
     "tn_odes, tn_inits, tn_syms = ode2tn(odes, inits, gamma=gamma, beta=beta)\n",
     "val_top = tn_syms[val][0]\n",
-    "tn_odes[val_top] += bias\n",
+    "tn_odes[val_top] += bias # we add the bias term directly to the TN ODEs to model a disturbance in the real system, not the simulated one\n",
     "tn_odes[bias] = 0\n",
     "resets = update_resets_with_ratios(odes, resets, tn_odes, tn_syms)\n",
     "dependent_symbols = {sym: sym_t/sym_b for sym, (sym_t, sym_b) in tn_syms.items()}\n",
     "import matplotlib\n",
-    "matplotlib.rcParams.update({'font.size': 14})\n",
+    "matplotlib.rcParams.update({'font.size': 14}) # shrink the legend a bit so it doesn't overlap setpoint\n",
     "gp.plot(tn_odes, tn_inits, t_eval, dependent_symbols=dependent_symbols, resets=resets, figure_size=figsize,\n",
     "       symbols_to_plot=list(dependent_symbols.keys()) + [bias], loc='lower right')\n",
     "import matplotlib.pyplot as plt\n",
