--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -619,6 +619,7 @@
     "v_top = tn_syms[v][0]\n",
     "tn_odes[v_top] += bias # add bias term directly to the TN ODEs to model a disturbance in the real system, not the simulated one\n",
     "tn_odes[bias] = 0\n",
+    "# next function replaces any original variables in resets, such as v, with their TN equivalents v_top and v_bot\n",
     "resets = update_resets_with_ratios(odes, resets, tn_odes, tn_syms)\n",
     "dependent_symbols = {sym: sym_t/sym_b for sym, (sym_t, sym_b) in tn_syms.items()}\n",
     "import matplotlib\n",
