--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -614,10 +614,10 @@
     "}\n",
     "gamma = 3\n",
     "beta = 1\n",
-    "# need to modify the TN a bit, so instead of plot_tn, we call ode2tn to get the TN ODEs, modify them, then call gpac.plot on those\n",
+    "# need to modify the TN, so instead of plot_tn, we call ode2tn to get the TN ODEs, modify them, then call gpac.plot on those\n",
     "tn_odes, tn_inits, tn_syms = ode2tn(odes, inits, gamma=gamma, beta=beta)\n",
     "v_top = tn_syms[v][0]\n",
-    "tn_odes[v_top] += bias # add bias term directly to the TN ODEs to model a disturbance in the real system, not the simulated one\n",
+    "tn_odes[v_top] += bias # add bias term directly to the TN ODEs to model disturbance in the real system, not the simulated one\n",
     "tn_odes[bias] = 0\n",
     "# next function replaces any original variables in resets, such as v, with their TN equivalents v_top and v_bot\n",
     "resets = update_resets_with_ratios(odes, resets, tn_odes, tn_syms)\n",
