added schlogl plot to notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -401,6 +401,156 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8ba229fa-eaef-4474-b239-27c6839e5e30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First show plot of Schlogl map (inverse of function f, with \"vector field\")\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "import matplotlib.ticker as ticker\n",
+    "\n",
+    "# Define the function and its parameters\n",
+    "k1 = 11\n",
+    "k2 = 16.5\n",
+    "k3 = 6.5\n",
+    "def f(y):\n",
+    "    return k1*y**3 - k2*y**2 + k3*y\n",
+    "\n",
+    "# Local optima\n",
+    "loc_max = 0.2697\n",
+    "loc_min = 0.7303\n",
+    "\n",
+    "# Points for p and q circles\n",
+    "y_p = 0.10115\n",
+    "y_q = 0.89887\n",
+    "x_p = f(y_p)\n",
+    "x_q = f(y_q)\n",
+    "\n",
+    "# Create data for plotting\n",
+    "y_vals = np.linspace(0, 1, 1000)\n",
+    "x_vals = f(y_vals)\n",
+    "\n",
+    "# Create figure and axis\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "ax = plt.gca()\n",
+    "\n",
+    "# Add vertical lines at local optima\n",
+    "x_loc_max = f(loc_max)\n",
+    "x_loc_min = f(loc_min)\n",
+    "plt.vlines(x_loc_max, 0, loc_max, colors='g', linestyles='dashed', linewidth=2)\n",
+    "plt.vlines(x_loc_min, 0, loc_min, colors='g', linestyles='dashed', linewidth=2)\n",
+    "\n",
+    "tick_color = \"darkred\"\n",
+    "\n",
+    "# Add labels for vertical lines below the x-axis\n",
+    "plt.text(x_loc_min, -0.07, r'$x_l$', color='green', fontsize=16, ha='center')\n",
+    "plt.text(x_loc_max, -0.07, r'$x_h$', color='green', fontsize=16, ha='center')\n",
+    "plt.text(0.5, -0.03, r'$x_0$', color=tick_color, fontsize=16, ha='center')\n",
+    "\n",
+    "# Add y-axis labels\n",
+    "plt.text(-0.04, y_p, r'$y_0$', color=tick_color, fontsize=16, va='center')\n",
+    "plt.text(-0.04, y_q, r'$y_1$', color=tick_color, fontsize=16, va='center')\n",
+    "\n",
+    "# Create a grid for the vector field\n",
+    "x_grid = np.linspace(0, 1, 21)\n",
+    "y_grid = np.linspace(0, 1, 21)\n",
+    "X, Y = np.meshgrid(x_grid, y_grid)\n",
+    "\n",
+    "# Define vector field directions\n",
+    "U = np.zeros_like(X)\n",
+    "V = np.zeros_like(Y)\n",
+    "colors = np.zeros_like(X)\n",
+    "mask = np.ones_like(X, dtype=bool)  # Mask to hide arrows that are too close to the curve\n",
+    "\n",
+    "# Threshold to avoid arrows crossing the curve\n",
+    "eps = 0.012\n",
+    "\n",
+    "# Determine which side of the curve each grid point is on\n",
+    "for i in range(len(x_grid)):\n",
+    "    for j in range(len(y_grid)):\n",
+    "        x_point = X[j, i]\n",
+    "        y_point = Y[j, i]\n",
+    "        \n",
+    "        # Check if point is too close to the curve\n",
+    "        if f(y_point) > x_point and f(y_point-eps) < x_point:\n",
+    "            # Too close to the curve - don't draw an arrow\n",
+    "            mask[j, i] = False\n",
+    "        elif f(y_point) <= x_point and f(y_point+eps) > x_point:\n",
+    "            # Too close to the curve - don't draw an arrow\n",
+    "            mask[j, i] = False\n",
+    "        elif f(y_point) > x_point:\n",
+    "            # Left side of the curve - red arrows pointing down\n",
+    "            U[j, i] = 0\n",
+    "            V[j, i] = -0.5\n",
+    "            colors[j, i] = 0  # Red\n",
+    "        else:\n",
+    "            # Right side of the curve - blue arrows pointing up\n",
+    "            U[j, i] = 0\n",
+    "            V[j, i] = 0.5\n",
+    "            colors[j, i] = 1  # Blue\n",
+    "\n",
+    "# Apply the mask to hide arrows near the curve\n",
+    "X_masked = np.ma.array(X, mask=~mask)\n",
+    "Y_masked = np.ma.array(Y, mask=~mask)\n",
+    "U_masked = np.ma.array(U, mask=~mask)\n",
+    "V_masked = np.ma.array(V, mask=~mask)\n",
+    "colors_masked = np.ma.array(colors, mask=~mask)\n",
+    "\n",
+    "# vector field\n",
+    "plt.quiver(X_masked, Y_masked, U_masked, V_masked, colors_masked, \n",
+    "           scale=30, cmap=ListedColormap(['coral', 'deepskyblue']), \n",
+    "           width=0.002,\n",
+    "           headwidth=5, headlength=5, headaxislength=3)\n",
+    "\n",
+    "# plot curve last so it covers other elements\n",
+    "\n",
+    "# Plot the function in three parts (solid-dashed-solid)\n",
+    "# First segment (y from 0 to loc_max)\n",
+    "y1 = y_vals[y_vals <= loc_max]\n",
+    "x1 = x_vals[y_vals <= loc_max]\n",
+    "plt.plot(x1, y1, 'k-', linewidth=3, label='Inverse function')\n",
+    "\n",
+    "# Middle segment (y from loc_max to loc_min) - dashed\n",
+    "y2 = y_vals[(y_vals > loc_max) & (y_vals < loc_min)]\n",
+    "x2 = x_vals[(y_vals > loc_max) & (y_vals < loc_min)]\n",
+    "plt.plot(x2, y2, 'k--', linewidth=3)\n",
+    "\n",
+    "# Last segment (y from loc_min to 1)\n",
+    "y3 = y_vals[y_vals >= loc_min]\n",
+    "x3 = x_vals[y_vals >= loc_min]\n",
+    "plt.plot(x3, y3, 'k-', linewidth=3)\n",
+    "\n",
+    "# Add circles with p and q labels at specified points\n",
+    "circle_p = plt.Circle((x_p, y_p), radius=0.025, facecolor='pink', edgecolor='black', zorder=10)\n",
+    "circle_q = plt.Circle((x_q, y_q), radius=0.025, facecolor='lightgreen', edgecolor='black', zorder=10)\n",
+    "ax.add_patch(circle_p)\n",
+    "ax.add_patch(circle_q)\n",
+    "\n",
+    "# Add p and q labels inside the circles\n",
+    "plt.text(x_p, y_p, r'$p$', fontsize=16, ha='center', va='center', style='italic', zorder=11)\n",
+    "plt.text(x_q, y_q, r'$q$', fontsize=16, ha='center', va='center', style='italic', zorder=11)\n",
+    "\n",
+    "# Add custom tick marks for x_0, y_0, and y_1\n",
+    "plt.plot([0.5, 0.5], [0.015, 0], color=tick_color, linewidth=2.5, transform=ax.get_xaxis_transform())\n",
+    "plt.plot([0.015, 0], [y_p, y_p], color=tick_color, linewidth=2.5, transform=ax.get_yaxis_transform())\n",
+    "plt.plot([0.015, 0], [y_q, y_q], color=tick_color, linewidth=2.5, transform=ax.get_yaxis_transform())\n",
+    "\n",
+    "plt.xlabel(r'$x$', fontsize=18)\n",
+    "plt.ylabel(r'$y$', fontsize=18)\n",
+    "plt.xlim(0, 1)\n",
+    "plt.ylim(0, 1)\n",
+    "plt.grid(True, linestyle='--', alpha=0.7)\n",
+    "plt.title(r'Schl$\\\"{\\mathrm{o}}$gl map', fontsize=18)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('plots/schlogl.pdf', format='pdf', bbox_inches='tight')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "facf0c10-400e-4635-a886-7bbf1bf96d88",
    "metadata": {
