--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -545,7 +545,7 @@
     "plt.grid(True, linestyle='--', alpha=0.7)\n",
     "plt.title(r'Schl$\\\"{\\mathrm{o}}$gl map', fontsize=18)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('plots/schlogl.pdf', format='pdf', bbox_inches='tight')\n",
+    "plt.savefig('plots/schlogl-map.pdf', format='pdf', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
