--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "4c53e281-b214-40fc-96b3-614bdc4e2c0c",
    "metadata": {},
    "outputs": [
@@ -293,12 +293,8 @@
     "from ode2tn import plot_tn, ode2tn\n",
     "\n",
     "x = sp.symbols('x')\n",
-    "odes = {\n",
-    "    x: -x,\n",
-    "}\n",
-    "inits = {\n",
-    "    x: 1,\n",
-    "}\n",
+    "odes  = { x: -x }\n",
+    "inits = { x: 1 }\n",
     "beta = 1\n",
     "t_eval = np.linspace(0, 10, 500)\n",
     "figsize = (15, 6)\n",
