--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -369,7 +369,9 @@
    "source": [
     "## Schlögl system\n",
     "\n",
-    "This is a chemical reaction network with a \"memory\" (a.k.a., hysteresis). There are two species $X$ and $Y$. $X$ is only a catalyst so its concentration does not change. If we influence $X$ we can affect $Y$ in a way that $Y$ will \"remember\" where it has been. The next plot shows starting at $(x,y) \\approx (0.5,0.1)$, if we raise $x$, then lower it, $y$ settles at a higher value $y \\approx 0.9$. If we now lower $x$, then raise it again, $y$ goes back to the lower value $y \\approx 0.1$."
+    "This is a chemical reaction network with a \"memory\" (a.k.a., hysteresis). There are two species $X$ and $Y$. $X$ is only a catalyst so its concentration does not change. If we influence $X$ we can affect $Y$ in a way that $Y$ will \"remember\" where it has been. The next plot shows starting at $(x,y) \\approx (0.5,0.1)$, if we raise $x$, then lower it, $y$ settles at a higher value $y \\approx 0.9$. If we now lower $x$, then raise it again, $y$ goes back to the lower value $y \\approx 0.1$.\n",
+    "\n",
+    "Ref: F. Schlögl. *Chemical reaction models for non-equilibrium phase transitions*. **Zeitschrift für physik**, 253(2):147–161, 1972.523"
    ]
   },
   {
