--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -412,7 +412,9 @@
     }
    ],
    "source": [
-    "# First show plot of Schlogl map (inverse of function f, with \"vector field\")\n",
+    "# Show plot of Schlogl map (inverse of function f, with \"vector field\")\n",
+    "# This cell is complex but it's just to show a figure for our paper.\n",
+    "# Feel free to skip to the next to see more examples of how to use ode2tn.\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import ListedColormap\n",
