--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -320,7 +320,7 @@
    "metadata": {},
    "source": [
     "## Bubble sort\n",
-    "These are ODEs that do a version of \"bubble sort\" in a sense. The variables $x_1,\\dots,x_n$ are sorted. The variable $y_{i,i+1}$ is responsible for swapping $x_i$ and $x_{i+1}$ if they are out of order. See S. Paul and K. Huper, *Analog rank filtering*, in __IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications__, vol. 40, no. 7, pp. 469-476, July 1993, https://doi.org/10.1109/81.257302"
+    "These are ODEs that do a version of \"bubble sort\" in a sense. The variables $x_1,\\dots,x_n$ are sorted. The variable $y_{i,i+1}$ is responsible for swapping $x_i$ and $x_{i+1}$ if they are out of order. See S. Paul and K. Hüper, *Analog rank filtering*, in __IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications__, vol. 40, no. 7, pp. 469-476, July 1993, https://doi.org/10.1109/81.257302"
    ]
   },
   {
