--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -611,16 +611,14 @@
     "figsize = (15, 6)\n",
     "\n",
     "# The `resets` parameter allows one to step in at pre-defined times and alter the value of variables.\n",
-    "# Below, we set x to 0.5 at time 5, to 0.01 at time 10, and to 0.5 at time 15.\n",
-    "# Variables can be original (x) or new (x_t, x_b). If new, the value is simply set.\n",
+    "# x starts at 0.5. Below, we set x to 0.9 at time 5, back to 0.5 at time 10, to 0.1 at time 15,\n",
+    "# and back to 0.5 at time 20. This is used to show the \"memory\", to demonstrate that after \n",
+    "# each time we set x back to 0.5, y converges to a high (~0.9) or low (~0.1) value,\n",
+    "# remembering whether x was previously high or low before x returns to 0.5.\n",
+    "# Variable keys in (the dicts that are values in the dict) resets can be \n",
+    "# original (x) or new (x_t, x_b). If new, the value is simply set.\n",
     "# If an original variable set to value `val`, it is set the same way initial values are calculated:\n",
     "# `x_t` is set to `scale*val`, and `x_b` is set to `scale`.\n",
-    "# This is used to show the \"memory\": \n",
-    "# x starts \"large\" (1).\n",
-    "# The first time we set x to 0.5, y stays large (around 0.9).\n",
-    "# We then set x very low, which changes y to about 0.\n",
-    "# When we set x back to 0.5, and the system remembers that we previously made x low, \n",
-    "# keeping y low (around 0.1), unlike the first time we set x to 0.5.\n",
     "resets = { \n",
     "    5:  {x: 0.9},\n",
     "    10: {x: 0.5},\n",
