added some comments to first code examples

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -112,22 +112,23 @@
     "from ode2tn import plot_tn, ode2tn\n",
     "\n",
     "x,y = sp.symbols('x y')\n",
-    "odes = {\n",
-    "    x: y-2,\n",
-    "    y: -x+2,\n",
+    "odes = {      # odes dict maps each symbol to an expression for its time derivative\n",
+    "    x: y-2,   # dx/dt = y-2\n",
+    "    y: -x+2,  # dy/dt = -x+2\n",
     "}\n",
-    "inits = {\n",
-    "    x: 2,\n",
-    "    y: 1,\n",
+    "inits = {     # inits maps each symbol to its initial value\n",
+    "    x: 2,     # x(0) = 2\n",
+    "    y: 1,     # y(0) = 1\n",
     "}\n",
-    "gamma = 2\n",
-    "beta = 1\n",
-    "t_eval = np.linspace(0, 6*pi, 1000)\n",
+    "gamma = 2 # uniform decay constant; should have gamma > max q^-; \n",
+    "          #   see proof of main Theorem in paper for what q^- is\n",
+    "beta = 1  # constant introduced to keep values from going to infinity or 0\n",
     "tn_odes, tn_inits, tn_syms = ode2tn(odes, inits, gamma=gamma, beta=beta)\n",
-    "gp.display_odes(tn_odes)\n",
+    "gp.display_odes(tn_odes)  # displays nice rendered LaTeX in Jupyter notebook\n",
     "print(f'{tn_inits=}')\n",
     "print(f'{tn_syms=}')\n",
     "figsize = (15, 6)\n",
+    "t_eval = np.linspace(0, 6*pi, 1000)\n",
     "plot_tn(odes, inits, gamma=gamma, beta=beta, t_eval=t_eval, figure_size=figsize, show_factors=True)"
    ]
   },
