--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -735,15 +735,15 @@
     "v, bias, shifted_integral, derivative_p, derivative_m, delayed_v = \\\n",
     "    sp.symbols('v bias shifted_integral derivative_p derivative_m delayed_v')\n",
     "shift = 10\n",
-    "lmbda = 1     # delayed_val follows val; how far behind determined by lambda\n",
-    "setpoint = 8  # the value at which we want to hold the variable val\n",
+    "lmbda = 1     # delayed_v follows v; how far behind determined by lambda\n",
+    "setpoint = 8  # the value at which we want to hold the variable v\n",
     "proportional_term = P * (setpoint - v)\n",
     "integral_term = I * (shifted_integral - shift)  # we shift integral up to stop it from going negative\n",
     "derivative_term = D * (v - delayed_v)\n",
     "odes = {\n",
     "    v: proportional_term + integral_term + derivative_term,\n",
     "    shifted_integral: setpoint - v,     # integral is computed exactly and is one of the variables (though shifted up)\n",
-    "    delayed_v: lmbda * (v - delayed_v), # derivative is approximated and is implicitly val - delayed_val\n",
+    "    delayed_v: lmbda * (v - delayed_v), # derivative is approximated and is implicitly v - delayed_v\n",
     "}\n",
     "inits = { \n",
     "    v: 5,\n",
