--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -382,13 +382,13 @@
     "\n",
     "This is a chemical reaction network with a \"memory\" (a.k.a., hysteresis):\n",
     "\n",
-    "$X \\to X + Y$\n",
+    "$X \\to^1 X + Y$\n",
     "\n",
-    "$3Y \\rightleftharpoons 2Y$\n",
+    "$3Y _{k_2}\\rightleftharpoons^{k_1} 2Y$\n",
     "\n",
-    "$Y \\to \\emptyset$\n",
+    "$Y \\to^{k_3} \\emptyset$\n",
     "\n",
-    "with appropriate rate constants (see associated paper).\n",
+    "with appropriate rate constants $k_1=11, k_2=16.5, k_3=6.5$ (see Schlögl paper cited below).\n",
     "\n",
     "$X$ is only a catalyst so its concentration does not change. If we influence $X$ we can affect $Y$ in a way that $Y$ will \"remember\" where it has been. The next plot shows starting at $(x,y) \\approx (0.5,0.1)$, if we raise $x$, then lower it, $y$ settles at a higher value $y \\approx 0.9$. If we now lower $x$, then raise it again, $y$ goes back to the lower value $y \\approx 0.1$.\n",
     "\n",
