--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -384,7 +384,7 @@
     "\n",
     "$X \\to^1 X + Y$\n",
     "\n",
-    "$3Y _{k_2}\\rightleftharpoons^{k_1} 2Y$\n",
+    "$3Y \\ \\ {}_{k_2}\\rightleftharpoons^{\\ k_1} \\ \\ 2Y$\n",
     "\n",
     "$Y \\to^{k_3} \\emptyset$\n",
     "\n",
