--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -639,8 +639,20 @@
    "id": "77a9a5cf-cf6e-4dd3-90b8-c061fa510638",
    "metadata": {},
    "source": [
-    "## Rössler attractor\n",
-    "This is a famous example of a chaotic system, where slight differences in initial conditions make for large differences in trajectories."
+    "## Willamowski-Rössler system\n",
+    "This is a famous example of a chaotic system, where slight differences in initial conditions make for large differences in trajectories.\n",
+    "\n",
+    "It is a chemical reaction network with the following reactions:\n",
+    "\n",
+    "$X \\ _{k_2}\\rightleftharpoons^{k_1} \\ 2X$\n",
+    "\n",
+    "$X+Y \\to^{k_3} 2Y$\n",
+    "\n",
+    "$Y \\to^{k_4} \\emptyset$\n",
+    "\n",
+    "$X+Z \\to^{k_5} \\emptyset$\n",
+    "\n",
+    "$Z \\ _{k_7}\\rightleftharpoons^{k_6} \\ 2Z$"
    ]
   },
   {
@@ -676,11 +688,11 @@
     "k6 = 16.5\n",
     "k7 = 0.5\n",
     "rxns = [\n",
-    "    (x | 2*x).k(k1).r(k2),\n",
-    "    (x+y >> 2*y).k(k3),\n",
-    "    (y >> gp.empty).k(k4),\n",
+    "    (x   |  2*x     ).k(k1).r(k2),\n",
+    "    (x+y >> 2*y     ).k(k3),\n",
+    "    (y   >> gp.empty).k(k4),\n",
     "    (x+z >> gp.empty).k(k5),\n",
-    "    (z | 2*z).k(k6).r(k7),\n",
+    "    (z   |  2*z     ).k(k6).r(k7),\n",
     "]\n",
     "odes = gp.crn_to_odes(rxns)\n",
     "inits = {\n",
