--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "fd0d773a-228c-408b-a5f9-1f5d5fe184a2",
    "metadata": {
     "ExecuteTime": {
@@ -141,7 +141,9 @@
     "print(f'{tn_syms=}')\n",
     "figsize = (15, 6)\n",
     "t_eval = np.linspace(0, 6*pi, 1000)\n",
-    "plot_tn(odes, inits, gamma=gamma, beta=beta, t_eval=t_eval, figsize=figsize, show_factors=True)"
+    "plot_tn(odes, inits, gamma=gamma, beta=beta, t_eval=t_eval, figsize=figsize, show_factors=True)\n",
+    "plt.savefig(f\"{images_dir}/sine-cosine-plot.pdf\", format=\"pdf\", bbox_inches=\"tight\") # for paper\n",
+    "plt.savefig(f\"{images_dir}/sine-cosine-plot.svg\", format=\"svg\", bbox_inches=\"tight\") # for README"
    ]
   },
   {
