--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "db47ea30-d807-48a8-8c92-297960d8b54a",
    "metadata": {
     "jupyter": {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "fd0d773a-228c-408b-a5f9-1f5d5fe184a2",
    "metadata": {
     "ExecuteTime": {
@@ -118,6 +118,9 @@
     "import numpy as np\n",
     "import gpac as gp\n",
     "import sympy as sp\n",
+    "import importlib\n",
+    "import ode2tn\n",
+    "importlib.reload(ode2tn)\n",
     "from ode2tn import plot_tn, ode2tn\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -143,7 +146,7 @@
     "print(f'{tn_inits=}')\n",
     "print(f'{tn_syms=}')\n",
     "figsize = (15, 6)\n",
-    "plot_tn(odes, inits, gamma=gamma, beta=beta, t_eval=t_eval, figsize=figsize, show_factors=True)\n",
+    "plot_tn(odes, inits, gamma=gamma, beta=beta, t_eval=t_eval, scale=1, figsize=figsize, show_factors=True)\n",
     "plt.savefig(f\"{images_dir}/sine-cosine-plot.pdf\", format=\"pdf\", bbox_inches=\"tight\") # for paper\n",
     "plt.savefig(f\"{images_dir}/sine-cosine-plot.svg\", format=\"svg\", bbox_inches=\"tight\") # for README"
    ]
@@ -1140,7 +1143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1154,7 +1157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
